--- a/vuserver/requirements-test.txt
+++ b/vuserver/requirements-test.txt
@@ -10,7 +10,7 @@ drf-tracking==1.5.0
 fabric==2.4.0
 gunicorn==19.9.0
 redis==4.5.4
-requests==2.22.0
+requests>=2.31.0
 drf-yasg==1.20.0
 pykwalify==1.8.0
 opencv-python~=4.6.0.66
